--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h3 {
   background-color: black;
 }
 .menu img {
+  margin: 8px;
   margin-left: 50px;
 }
 .div_menu {
@@ -76,7 +77,7 @@ h3 {
   margin-bottom: 0px;
   font-size: 40px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -134,10 +135,10 @@ p,
   margin-bottom: 50px;
 }
 .cta_primera_pagina {
-  background: rgb(30,131,136);
-  background: linear-gradient(122deg, rgba(30,131,136,1) 0%, rgba(48,207,214,1) 100%);
+  background: rgb(145,105,252);
+  background: radial-gradient(circle, rgba(145,105,252,1) 0%, rgba(81,57,159,1) 100%);
   padding:16px;
-  border: solid 1px #30CFD6 ;
+  border: solid 1px #51399F ;
   border-radius:8px;
   text-decoration: none;
   color: white;
@@ -157,8 +158,8 @@ p,
   margin-top: 50px;
 }
 .cta_tercera_pagina{
-  background: rgb(30,131,136);
-  background: linear-gradient(122deg, rgba(30,131,136,1) 0%, rgba(48,207,214,1) 100%);
+  background: rgb(145,105,252);
+  background: radial-gradient(circle, rgba(145,105,252,1) 0%, rgba(81,57,159,1) 100%);
   padding:25px;
   border-radius:8px;
   text-decoration: none;
@@ -166,7 +167,7 @@ p,
   font-weight: 500;
   text-align: center;
   font-size:21px;
-  box-shadow: 0px 0px 25px #30CFD6;
+  box-shadow: 0px 0px 25px #51399F;
   animation: moveButton 0.5s infinite alternate;
   
 }
@@ -180,9 +181,9 @@ p,
   }
 }
 #boton_cursos {
-  border: solid 1px #30CFD6 ;
+  border: solid 1px #51399F ;
   background: white;
-  color: #30CFD6;
+  color: #51399F;
   font-weight: 500;
   margin-left: 16px;
 }
@@ -204,7 +205,7 @@ p,
   margin-bottom: 30px;
   font-size: 21px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -221,7 +222,7 @@ p,
   font-weight: 800;
   margin: 0px 100px;
   margin-bottom: 30px;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -244,7 +245,7 @@ p,
 #tercera_seccion h2 {
   font-size: 40px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
   margin: 0px 100px;
   margin-bottom: 30px;
 
@@ -273,7 +274,7 @@ p,
   width: 20em;
   margin: 0px 120px;
   border-radius: 8px;
-  border: solid 4px #30ced67e;
+  border: solid 4px #51399F;
 }
 .titulo_texto_cuarta_seccion {
   display: flex;
@@ -288,7 +289,7 @@ p,
   margin-left: 0px;
   margin-bottom: 30px;
   text-align: start;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
 
   -webkit-text-fill-color: transparent;
@@ -318,7 +319,7 @@ p,
   margin: 60px 50px;
   margin-bottom: 25px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -346,8 +347,8 @@ p,
   text-decoration: none;
   margin-top: 16px;
   margin-bottom: 16px;
-  background: rgb(30,131,136);
-  background: linear-gradient(122deg, rgba(30,131,136,1) 0%, rgba(48,207,214,1) 100%);
+  background: rgb(145,105,252);
+  background: radial-gradient(circle, rgba(145,105,252,1) 0%, rgba(81,57,159,1) 100%);
   border: solid 1px #30CFD6 ;
   border-radius: 8px;
 }
@@ -359,7 +360,7 @@ p,
 }
 
 .tarjeta_quinta_seccion {
-  border: solid #30CFD6 1px;
+  border: solid #51399F 1px;
   border-radius: 8px;
   display: flex;
   width: 40%;
@@ -382,7 +383,7 @@ p,
   font-size: 30px;
   margin: 16px 0px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -398,7 +399,7 @@ p,
   margin: 60px 50px;
   margin-bottom: 25px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -462,7 +463,7 @@ p,
 }
 .seccion_bonus h2 {
   font-size: 50px;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -504,7 +505,7 @@ p,
   margin: 60px 50px;
   margin-bottom: 25px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -536,7 +537,7 @@ p,
 
 #container_todos_servicios h3 {
   text-align: center;
-  background: radial-gradient(#30CFD6, #0000009f);
+  background: radial-gradient(#9169fc, #0000009f);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -573,7 +574,7 @@ p,
   align-items: center;
   justify-content: center;
   width: 100%;
-  border: solid 1px #30CFD6;
+  border: solid 1px #51399F;
 }
 #cta1_octava_pagina {
   margin: auto;
@@ -587,7 +588,7 @@ p,
   margin-top: 0px;
   font-size: 40px;
   font-weight: 800;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -618,7 +619,7 @@ p,
   font-weight: 800;
   margin-top: 0px;
   margin-bottom: 32px;
-  background: radial-gradient(#30CFD6, #1e8388);
+  background: radial-gradient(#9169fc, #51399F);
 
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -682,19 +683,19 @@ p,
 
 /*HOVERS*/
 .div_menu a:hover{
-  color: #30CFD6;
+  color: #51399F;
   transition: 0.2s all;
 }
 #cta_menu:hover{
   background: white;
-  color: #30CFD6;
+  color: #51399F;
   font-weight: 500;
   transition: 0.5s all;
 }
 .cta_primera_pagina:hover{
-  border: solid 1px #30CFD6 ;
+  border: solid 1px #9169fc ;
   background: white;
-  color: #30CFD6;
+  color: #51399F;
   font-weight: 500;
   transition: 0.5s all;
 }
@@ -713,7 +714,7 @@ p,
 
 }
 .cta_quinta_pagina:hover{
-  border: solid 1px #30CFD6 ;
+  border: solid 1px #51399F ;
   background: white;
   color: #30CFD6;
   font-weight: 500;
@@ -778,7 +779,7 @@ p,
     text-decoration: none;
     font-size: 21px;
     font-weight: 600;
-    background: radial-gradient(#30CFD6, #1e8388);
+    background: radial-gradient(#9169fc, #51399F);
 
 
     -webkit-text-fill-color: transparent;
@@ -838,7 +839,7 @@ p,
   #imagen_responsive_primera_seccion {
     width: 100%;
     border-radius: 8px;
-    border: solid 2px #30CFD6;
+    border: solid 2px #9169fc;
   }
   .container_imagen_responsive_primera_pagina {
     display: flex;
@@ -852,8 +853,8 @@ p,
     justify-content: center;
   }
   .cta_primera_pagina {
-    background: rgb(30,131,136);
-    background: linear-gradient(122deg, rgba(30,131,136,1) 0%, rgba(48,207,214,1) 100%);
+    background: rgb(145,105,252);
+    background: radial-gradient(circle, rgba(145,105,252,1) 0%, rgba(81,57,159,1) 100%);
     padding:16px;
     border-radius:8px;
     text-decoration: none;
@@ -870,8 +871,8 @@ p,
     border: none;
   }
   .cta_tercera_pagina{
-    background: rgb(30,131,136);
-    background: linear-gradient(122deg, rgba(30,131,136,1) 0%, rgba(48,207,214,1) 100%);
+    background: rgb(145,105,252);
+    background: radial-gradient(circle, rgba(145,105,252,1) 0%, rgba(81,57,159,1) 100%);
     border-radius:8px;
     text-decoration: none;
     color: white;
