--- a/style.css
+++ b/style.css
@@ -751,7 +751,7 @@ p,
     position: absolute;
     background-color:rgba(255, 255, 255, 0.904);
     backdrop-filter: blur(1.17rem);
-    left: -500px;
+    left: -800px;
     padding-right: 8px;
   }
   .container-nav-r #menu2 {
@@ -829,7 +829,7 @@ p,
   }
   .logo_responsive{
     display:flex;
-    width:20em;
+    width:15em;
     margin: auto;
   }
 
@@ -849,7 +849,7 @@ p,
   #containerBotones {
     margin-top: 0px;
     margin: 12.5px 0px;
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     justify-content: center;
   }
   .cta_primera_pagina {
@@ -917,6 +917,7 @@ p,
     font-weight: 500;
   }
   .aparece_en {
+    justify-content: space-around;
     margin: 0px;
     padding:50px 8px;
     padding-top: 0px;
