--- a/style.css
+++ b/style.css
@@ -51,12 +51,8 @@ h3 {
   align-items: center;
   width: 100%;
   height: 50px;
-  background: rgb(203, 203, 203);
-  background: linear-gradient(
-    180deg,
-    rgba(203, 203, 203, 1) 0%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background: rgb(81,57,159);
+  background: linear-gradient(180deg, rgba(81,57,159,0.49343487394957986) 0%, rgba(199,191,224,0.6278886554621849) 50%, rgba(255,255,255,1) 100%);
 }
 .barra_oferta p {
   font-weight: 500;
@@ -126,7 +122,8 @@ p,
 }
 #banner img {
   width: 39rem;
-  border-radius: 8px;
+  border-radius: 25px;
+  box-shadow: 0.5px 0.5px 2px 2px #51399F;
 }
 #containerBotones {
   display: flex;
