--- a/style.css
+++ b/style.css
@@ -643,6 +643,9 @@ p,
   margin: 16px;
   margin-left: 8px;
 }
+.ver_mas img{
+  width: 35px;
+}
 .respuesta {
   display: none;
   text-align: start;
